--- a/assets/scss/alfrewDesign/components/_navbars.scss
+++ b/assets/scss/alfrewDesign/components/_navbars.scss
@@ -41,7 +41,7 @@
   @include sizePosition(90);
   background-color: $main-color-vibrant-transpa;
   border-radius: 100%;
-  transition: transform 900ms;
+  transition: transform 450ms;
 }
 
 .nav-check {
@@ -51,11 +51,15 @@
 
   &:checked ~ .dot {
     transform: scale(5000%);
+    transition: transform 900ms;
   }
 
   &:checked ~ .navbar-collapse {
     opacity: 1;
     transition: opacity 500ms 400ms;
+    .nav-item {
+      display: block;
+    }
   }
 
   &:checked ~ .burger-wrap {
@@ -91,6 +95,7 @@
   font-size: $font-size-h1;
 }
 .nav-item {
+  display: none;
   margin-bottom: $spacing-unit * 3;
   color: $main-text-contrast;
   font-size: $font-size-h1;
@@ -140,6 +145,7 @@
         display: flex;
       }
       .nav-item {
+        display: block;
         margin-right: $spacing-unit * 3;
         margin-bottom: 0px;
         font-size: $font-size-h4;
